<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PointDemoApp</string>
    <string name="title_section1">Auth</string>
    <string name="title_section2">Map</string>
    <string name="title_section3">Checklist</string>
    <string name="action_settings">Log Out</string>
    <string name="error_toast_message">Opps!! Application Crashed</string>
    <string name="enter_email">Your e-mail address</string>
    <string name="enter_apikey">Bluedot API Key</string>
    <string name="enter_package">Package Name</string>
    <string name="save_authenticate">Log in</string>
    <string name="clear_logout">Log out</string>
    <string name="please_wait_authenticating">Authenticating &#8230; </string>
    <string name="please_wait_download">Downloading data &#8230; </string>
    <string name="loggned_in_as">You are logged in as</string>
    <string name="fence_name">Fence : </string>
    <string name="fence_distance">Distance : </string>
    <string name="hold_for_gps">Hold to show device location</string>
    <string name="power_consumption_title">Power Consumption</string>
    <string name="power_consumption_message">Holding the button to show your location uses Google Location Services that drains power at a high rate. Without the button held, your actions will still trigger using the energy efficient Bluedot Point SDK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="app_restart">Service auto restart mode</string>
    <string name="enter_details">Enter your account details</string>
    <string name="empty_ruleset">No data available on the backend. To start testing, please create at least one zone with a fence and an action to trigger when the device enters the location on the backend using our friendly <![CDATA[<a href="https://www.pointaccess.bluedot.com.au/pointaccess-v1/login.html">dashboard</a>]]>.</string>
    <string name="location_permissions_mandatory">Location permission has not been granted, App will be redirected to the Application Settings page from where you can grant the Location permission</string>
    <string name="permission_needed">Bluedot Point SDK requires Location Services to start. Therefore granting the Location permission is mandatory, without that the SDK will not authenticate.</string>
    <string name="foreground_notification_title">Location Access</string>
    <string name="foreground_notification_text">This app is utilizing the location to trigger alerts in both background and foreground modes when you visit your favourite locations.</string>

</resources>