<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoout_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <FrameLayout
        android:id="@+id/img_bluedot_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/bluedot" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="center"
            android:text="@string/loggned_in_as"
            android:textSize="@dimen/logged_in_as" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_apikey"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_package"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_authenticate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_authentication"
            android:padding="15dp"
            android:minWidth="150dp"
            android:text="@string/save_authenticate"
            android:textColor="@color/grey_color" />
    </LinearLayout>

</RelativeLayout>